# ledger

./: README.md  pyproject.toml
.github/workflows/: test.yml
ledger_agent/: __init__.py  cli.py
ledger_agent/agent_instructions/: AGENTS.md
tests/: test_ledger_cli.py
